Menambahkan Halaman About Me, dan Merevisi Tata Letak Halaman Lainnya

--- a/blog.html
+++ b/blog.html
@@ -7,29 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <p align="center">
+        <a href="index.html">Home</a> |
+        <a href="about.html">About Me</a> |
+        <a href="gallery.html">Gallery</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+    </p>
 
     <div class="container">
-        <h1>Blog & Articles</h1>
+        <h1 align="center">Blog & Articles</h1>
         
-        <article>
+        <article align="center">
             <h2>AI dan Masa Depan Pekerjaan</h2>
             <p>Artificial Intelligence (AI) semakin mengubah cara kita bekerja. Dengan kemampuan untuk mengotomatisasi tugas-tugas rutin, AI memungkinkan manusia untuk fokus pada pekerjaan yang membutuhkan kreativitas dan empati. Namun, tantangannya adalah bagaimana kita menyesuaikan tenaga kerja dengan perubahan ini.</p>
         </article>
 
-        <article>
+        <article align="center">
             <h2>Etika dalam Pengembangan AI</h2>
             <p>Pengembangan AI tidak hanya tentang teknologi, tetapi juga etika. Bagaimana kita memastikan AI tidak digunakan untuk merugikan manusia? Isu seperti bias dalam algoritma dan privasi data menjadi perhatian utama yang harus diatasi oleh para pengembang.</p>
         </article>
 
-        <article>
+        <article align="center">
             <h2>AI Generatif: Inovasi atau Ancaman?</h2>
             <p>AI generatif seperti model bahasa besar dan pembuat gambar telah menciptakan gelombang inovasi. Dari seni hingga penulisan, teknologi ini menawarkan kemungkinan tak terbatas. Namun, ada kekhawatiran tentang penyalahgunaan, seperti deepfake atau plagiarisme otomatis.</p>
         </article>
