--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <p align="center">
+        <a href="index.html">Home</a> |
+        <a href="about.html">About Me</a> |
+        <a href="gallery.html">Gallery</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+    </p>
 
-    <div class="container">
-        <h1>Contact Gue</h1>
-        <p>Email: jokalzz@example.com</p>
-        <p>Phone: +62 123 456 7890</p>
+    <div align="center" class="container">
+        <h1 align="center">Contact Me!</h1>
+        <p>Email: jonathankaligis026@student.unsrat.ac.id</p>
+        <p>Phone: +62 812 4366 1212</p>
         <p>Instagram: @jokaligis</p>
-        <p>AKU ADALAH JONATHAN KALIGIS SALAM KENAL :>>></p>
+        <b>JoKa tte yonde kudasai, Call Me JoKa, Panggil Saya JoKa</b>
     </div>
 </body>
-</html>
+</html> 
