--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <p align="center">
+        <a href="index.html">Home</a> |
+        <a href="about.html">About Me</a> |
+        <a href="gallery.html">Gallery</a> |
+        <a href="blog.html">Blog</a> |
+        <a href="contact.html">Contact</a>
+    </p>
 
     <div class="container">
-        <h1>Selamat Datang di Dunia Saya</h1>
-        <font size="5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1 align="center">Watashi no u~ebusaito e yōkoso</h1>
+        <br>
+        <h1 align="center">I AM JONATHAN KALIGIS</h1>
+        <h2 align="center">I'M AN INFORMATICS STUDENT</h2>
     </div>
 </body>
 </html>
