Merevisi Bagian About Me

--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
     <h1 align="center">About Me</h1>
     <h2 >HELLO WORLD!</h2>
     <p>Call Me JoKa</p>
-    <p>I am currently in my fourth semester studying informatics engineering at Sam Ratulangi University, and I am just beginning to explore the world of coding. I have a strong passion for technology, particularly in programming. Additionally, I am enthusiastic about sports, particularly calisthenics.</p>
+    <p>I am currently in my fourth semester studying informatics engineering at Sam Ratulangi University, and I am just beginning to explore the world of coding. I have a strong passion for technology, particularly in programming. 
+        Additionally, I am enthusiastic about E-sports some like Valorant and Zenless Zone Zero, and i do sports too particularly Basket Ball and GYM.</p>
     <ul>
         <li>Name : Jonathan Gabrilio Kaligis</li>
         <li>Hobby : Coding, Playing Valorant & Zenless Zone Zero, and Playing Guitar</li>
