Merevisi bagian Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -24,24 +24,24 @@
             <table align="center">
                 <!-- Baris 1 -->
                 <tr >
-                    <td><img src="https://picsum.photos/id/237/150/150" alt="Kucing 1"></td>
-                    <td><img src="https://placedog.net/150/150?id=1" alt="Anjing 1"></td>
-                    <td><img src="https://picsum.photos/id/238/150/150" alt="Kucing 2"></td>
-                    <td><img src="https://placedog.net/150/150?id=2" alt="Anjing 2"></td>
+                    <td><img src="https://picsum.photos/id/237/150/150" alt="Foto 1"></td>
+                    <td><img src="https://placedog.net/150/150?id=1" alt="Foto 2"></td>
+                    <td><img src="https://picsum.photos/id/238/150/150" alt="Foto 3"></td>
+                    <td><img src="https://placedog.net/150/150?id=2" alt="Foto 4"></td>
                 </tr>
                 <!-- Baris 2 -->
                 <tr>
-                    <td><img src="https://picsum.photos/id/239/150/150" alt="Kucing 3"></td>
-                    <td><img src="https://placedog.net/150/150?id=3" alt="Anjing 3"></td>
-                    <td><img src="https://picsum.photos/id/240/150/150" alt="Kucing 4"></td>
-                    <td><img src="https://placedog.net/150/150?id=4" alt="Anjing 4"></td>
+                    <td><img src="https://picsum.photos/id/239/150/150" alt="Foto 5"></td>
+                    <td><img src="https://placedog.net/150/150?id=3" alt="Foto 6"></td>
+                    <td><img src="https://picsum.photos/id/240/150/150" alt="Foto 7"></td>
+                    <td><img src="https://placedog.net/150/150?id=4" alt="Foto 8"></td>
                 </tr>
                 <!-- Baris 3 -->
                 <tr>
-                    <td><img src="https://picsum.photos/id/241/150/150" alt="Kucing 5"></td>
-                    <td><img src="https://placedog.net/150/150?id=5" alt="Anjing 5"></td>
-                    <td><img src="https://picsum.photos/id/242/150/150" alt="Kucing 6"></td>
-                    <td><img src="https://placedog.net/150/150?id=6" alt="Anjing 6"></td>
+                    <td><img src="https://picsum.photos/id/241/150/150" alt="Foto 9"></td>
+                    <td><img src="https://placedog.net/150/150?id=5" alt="Foto 10"></td>
+                    <td><img src="https://picsum.photos/id/242/150/150" alt="Foto 11"></td>
+                    <td><img src="https://placedog.net/150/150?id=6" alt="Foto 12"></td>
                 </tr>
             </table>
 
