Merevisi Home dengan Menambahkan Foto' '

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <br>
         <h1 align="center">I AM JONATHAN KALIGIS</h1>
         <h2 align="center">I'M AN INFORMATICS STUDENT</h2>
+        <center><img  src="./photos/IMG-20240410-WA0125.jpg" alt="foto saya" width="20%" ></center>        
     </div>
 </body>
 </html>
