--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
             <table align="center" border="1">
                 <tr>
                     <td align="center" width="300" height="500">
-                        <img src="./images/santai.jpg" alt="santai-1" width="100%">
+                        <img src="./images/santai-1.jpg" alt="santai-1" width="100%">
                         <br><b>Me At Beach</b>
                     </td>
                     <td align="center" width="300" height="500">
@@ -41,15 +41,15 @@
               <h2 align="center">GYM</h2>
               <table align="center" border="1">
                 <tr>
-                    <td align="center" width="300" height="500">
+                    <td align="center" width="400" height="600">
                         <img src="./images/berotot-1.jpg" alt="santai-1" width="100%">
                         <br><b>1 MONTH</b>
                     </td>
-                    <td align="center" width="300" height="500">
+                    <td align="center" width="400" height="600">
                         <img src="./images/berotot-2.jpg" alt="santai-3" width="100%">
                         <br><b>2 MONTHS</b>
                     </td>
-                    <td align="center" width="300" height="500">
+                    <td align="center" width="400" height="600">
                         <img src="./images/berotot-4.jpg" alt="santai-3" width="100%">
                         <br><b>3 MONTHS</b>
                     </td>   
