Merevisi bagian contact

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
 
     <div align="center" class="container">
         <h1 align="center">Contact Me!</h1>
-        <p>Email: jonathankaligis026@student.unsrat.ac.id</p>
-        <p>Phone: +62 812 4366 1212</p>
-        <p>Instagram: @jokaligis</p>
-        <b>JoKa tte yonde kudasai, Call Me JoKa, Panggil Saya JoKa</b>
+        <p>Email: <a href="mailto:jonathankaligis026@student.unsrat.ac.id">jonathankaligis026@student.unsrat.ac.id</a></p>
+        <p>Phone: <a href="https://wa.me/6281243661213" target="_blank">+62 812 4366 1213</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/jokaligis" target="_blank">@jokaligis</a></p>
+        <big><b>JoKa tte yonde kudasai, Call Me JoKa, Panggil Saya JoKa</b></big>
     </div>
 </body>
 </html> 
