menambahkan videos bagian gallery dan merevisi beberapa hal

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 
-                <p class="welcome-text">Watashi no u~ebusaito e yōkoso</p>
+                <p class="welcome-text"><strong>Watashi no u~ebusaito e yōkoso</strong></p>
                 <h1>I AM JONATHAN KALIGIS</h1>
                 <h2>INFORMATICS STUDENT</h2>
                 <a href="awal.html">
@@ -137,6 +137,30 @@
                             <img src="./images/rina.png" alt="Alexandrina Sebastine">
                             <div class="gallery-caption">Alexandrina Sebastine</div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="gallery-section">
+                    <h3>My Valorant Clips</h3>
+                    <div class="gallery-grid">
+                        <a href="clip1.html">
+                        <div class="gallery-item">
+                            <img src="./images/raze.jpg" alt="Ace 01">
+                            <div class="gallery-caption">Ace 01</div>
+                        </div>
+                        </a>
+                        <a href="clip2.html">
+                        <div class="gallery-item">
+                            <img src="./images/fade.jpg" alt="Ace 02">
+                            <div class="gallery-caption">Ace 02</div>
+                        </div>
+                        </a>
+                        <a href="clip3.html">
+                        <div class="gallery-item">
+                            <img src="./images/omen.jpg" alt="Ace 03">
+                            <div class="gallery-caption">Ace 03</div>
+                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
