--- a/artikel-ai-masa-depan-pekerjaan.html
+++ b/artikel-ai-masa-depan-pekerjaan.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="index.html">Logo</a>
+                    <a href="index.html">JoKa</a>
                 </div>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
