Merubah nama file, dan beberapa rombakan

--- a/clip2.html
+++ b/clip2.html
@@ -10,10 +10,10 @@
     <header>
         <nav class="navs">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About Me</a></li>
-                <li><a href="index.html#gallery">Gallery</a></li>
-                <li><a href="index.html#blog">Blog</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html#about">About Me</a></li>
+                <li><a href="home.html#gallery">Gallery</a></li>
+                <li><a href="home.html#blog">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -25,10 +25,14 @@
         
             <div class="clips">
                 <div class="clip">
+                    <a href="clip1.html" class="navs-button prevs-button">&#10094;</a>
+
                     <video controls class="main-video">
                       <source src="videos/clip2.mp4" type="video/mp4" />
                       Your browser does not support the video tag.
                     </video>
+                    
+                    <a href="clip3.html" class="navs-button nexts-button">&#10095;</a>
                   </div>
             </div>
 
