--- a/miyabi.html
+++ b/miyabi.html
@@ -6,16 +6,15 @@
     <title>Hoshimi Miyabi - Character Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="character-styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
         <nav class="navs">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About Me</a></li>
-                <li><a href="index.html#gallery" class="active">Gallery</a></li>
-                <li><a href="index.html#blog">Blog</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html#about">About Me</a></li>
+                <li><a href="home.html#gallery" class="active">Gallery</a></li>
+                <li><a href="home.html#blog">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
@@ -89,7 +88,7 @@
             </div>
             
             <div class="navigation-buttons">
-                <a href="index.html#gallery" class="nav-button"><i class="fas fa-arrow-left"></i> Back to Gallery</a>
+                <a href="home.html#gallery" class="nav-button"><i class="fas fa-arrow-left"></i> Back to Gallery</a>
                 <a href="astra.html" class="nav-button">Next Character <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -105,21 +104,14 @@
                 <div class="footer-section">
                     <h3>Go To</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#about">About Me</a></li>
-                        <li><a href="index.html#gallery">Gallery</a></li>
-                        <li><a href="index.html#blog">Blog</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="home.html#about">About Me</a></li>
+                        <li><a href="home.html#gallery">Gallery</a></li>
+                        <li><a href="home.html#blog">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Connect</h3>
-                    <div class="social-links">
-                        <a href="https://github.com/jokalzz" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                        <a href="https://www.youtube.com/@zydesx4199" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/jokaligis/?__pwa=1#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
+               
             </div>
             <div class="copyright">
                 <p>&copy; 2025 Jonathan Kaligis. All rights reserved.</p>
