--- a/artikel-ai-generatif.html
+++ b/artikel-ai-generatif.html
@@ -11,13 +11,13 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="index.html">JoKa</a>
+                    <a href="home.html">JoKa</a>
                 </div>
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About Me</a></li>
-                    <li><a href="index.html#gallery">Gallery</a></li>
-                    <li><a href="index.html#blog">Blog</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="home.html#about">About Me</a></li>
+                    <li><a href="home.html#gallery">Gallery</a></li>
+                    <li><a href="home.html#blog">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="burger">
@@ -80,7 +80,7 @@
                 </div>
                 
                 <div class="article-footer">
-                    <a href="index.html#blog" class="back-button">Kembali ke Blog</a>
+                    <a href="home.html#blog" class="back-button">Kembali ke Blog</a>
                 </div>
             </div>
         </article>
