--- a/home.html
+++ b/home.html
@@ -203,6 +203,18 @@
                     </div>
                 </div>
             </section>
+            <section id="about" class="section">
+                <div class="container">
+                    <h2 class="section-title">THANK YOU FOR COMING!</h2>
+                    <div class="about-content">
+                        <div class="about-text">
+                            <h3>hope u enjoy!</h3>
+                            <button onclick="redirectToPage()">Click Me!</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer>
