Menambahkan JavaScript, menghapus beberapa html tidak dipakai, dan memperbaiki bagian gallery

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
                     <p class="welcome-text"><strong>Watashi no u~ebusaito e yōkoso</strong></p>
                     <h1>I AM JONATHAN KALIGIS</h1>
                     <h2>INFORMATICS STUDENT</h2>
-                    <a href="awal.html">
+                    <a href="index.html">
                     <div class="profile-img">
                         <img src="./images/almets-bebas-crop.jpg" alt="Jonathan Kaligis" width="150">
                     </div>
@@ -43,11 +43,7 @@
                         <p id="date"></p>
                         <p id="time"></p>
                     </div>
-                    <div class="social-links">
-                        <a href="https://github.com/jokalzz" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                        <a href="https://www.youtube.com/@zydesx4199" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/jokaligis/?__pwa=1#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>    
-                    </div>
+                
                 </div>
             </section>
 
@@ -149,24 +145,18 @@
                     <div class="gallery-section">
                         <h3>My Valorant Clips</h3>
                         <div class="gallery-grid">
-                            <a href="clip1.html">
                             <div class="gallery-item">
                                 <img src="./images/raze.jpg" alt="Ace 01">
                                 <div class="gallery-caption">Ace 01</div>
                             </div>
-                            </a>
-                            <a href="clip2.html">
                             <div class="gallery-item">
                                 <img src="./images/fade.jpg" alt="Ace 02">
                                 <div class="gallery-caption">Ace 02</div>
                             </div>
-                            </a>
-                            <a href="clip3.html">
                             <div class="gallery-item">
                                 <img src="./images/omen.jpg" alt="Ace 03">
                                 <div class="gallery-caption">Ace 03</div>
                             </div>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +199,7 @@
                     <div class="about-content">
                         <div class="about-text">
                             <h3>hope u enjoy!</h3>
-                            <button onclick="redirectToPage()">Click Me!</button>
+                            <button onclick="redirectToPage()">Stalk Me Here🤭</button>
                         </div>
                     </div>
                 </div>
