menambahkan button untuk pergi ke site lain

--- a/home.html
+++ b/home.html
@@ -159,6 +159,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="more-photo-wrapper">
+                    <a href="artikel-ai-masa-depan-pekerjaan.html" class="more-photo">More Photo Here</a>
+                    </div>
                 </div>
             </section>
 
