menambahkan file 404.html

--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="more-photo-wrapper">
-                    <a href="artikel-ai-masa-depan-pekerjaan.html" class="more-photo">More Photo Here</a>
+                    <a href="404.html" class="more-photo">More Photo Here</a>
                     </div>
                 </div>
             </section>
